--- a/.github/workflows/phpuint.yml
+++ b/.github/workflows/phpuint.yml
@@ -2,9 +2,8 @@ name: run-tests
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ master ]
   pull_request:
-    branches: [ main, develop ]
 
 jobs:
   test:
