--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,9 +2,8 @@ name: fix-code-style
 
 on:
   push:
-    branches: [main, develop]
+    branches: [ master ]
   pull_request:
-    branches: [main, develop]
 
 jobs:
   test:
