--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "process-timeout":0
     },
     "require": {
-        "ext-zip": "*"
+        "ext-zip": "*",
+        "spatie/once": "^3.1"
     },
     "require-dev": {
         "phpunit/phpunit": "11"
