--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -35,7 +35,8 @@ jobs:
           coverage: none
       - name: Psalm Security Scan
         uses: psalm/psalm-github-security-scan@f3e6fd9432bc3e44aec078572677ce9d2ef9c287
-      
+        with:
+          composer_ignore_platform_reqs: true
       - name: Upload Security Analysis results to GitHub
         uses: github/codeql-action/upload-sarif@v3
         with:
